--- a/clock.css
+++ b/clock.css
@@ -1,16 +1,27 @@
-body{
+body {
     font-family:
+
 }
-#clock{
+#clock {
     width:400px;
     text-align:center;
     margin: 0 auto;
-    margin-top:25%;
-    font-size:55pt;
+    margin-top:15%;
+    font-size:45px;
     color: white;
+}
+
+#myClock {
+	font-size: 25px;
+	text-align: center;
+	margin: 0 auto;
+	margin-top:20%;
+
+
 }
 
 h1	{
 	text-align: center;
 	color: white;
 }
+
